force-app/main/default/objects/GitHub_Workflow_Metric__c/GitHub_Workflow_Metric__c.object-meta.xml
<CustomObject>
    <label>GitHub Workflow Metric</label>
    <nameField>
        <label>Workflow Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GitHub Workflow Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>