force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Ai_Alert_Channel__c.field-meta.xml
<CustomField>
    <fullName>Ai_Alert_Channel__c</fullName>
    <label>AI Alert Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>