force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Ai_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Ai_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Alert Sent</label>
    <type>Checkbox</type>
</CustomField>