force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Ai_Blocking__c.field-meta.xml
<CustomField>
    <fullName>Ai_Blocking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Blocking</label>
    <type>Checkbox</type>
</CustomField>