force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Ai_Model__c.field-meta.xml
<CustomField>
    <fullName>Ai_Model__c</fullName>
    <label>AI Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>