force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Ai_Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Ai_Recommended_Action__c</fullName>
    <label>AI Recommended Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>