force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Ai_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Ai_Risk_Level__c</fullName>
    <label>AI Risk Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>