force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Ai_Summary__c.field-meta.xml
<CustomField>
    <fullName>Ai_Summary__c</fullName>
    <label>AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>