force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Ai_Top_Issues__c.field-meta.xml
<CustomField>
    <fullName>Ai_Top_Issues__c</fullName>
    <label>AI Top Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>