force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Analyzer_Exit_Code__c.field-meta.xml
<CustomField>
    <fullName>Analyzer_Exit_Code__c</fullName>
    <label>Analyzer Exit Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>