force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Base_Branch__c.field-meta.xml
<CustomField>
    <fullName>Base_Branch__c</fullName>
    <label>Base Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>