force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Conclusion__c</fullName>
    <label>Conclusion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>