force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Created_From_GitHub__c.field-meta.xml
<CustomField>
    <fullName>Created_From_GitHub__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Created From GitHub</label>
    <type>Checkbox</type>
</CustomField>