force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Critical_Findings__c.field-meta.xml
<CustomField>
    <fullName>Critical_Findings__c</fullName>
    <label>Critical Findings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>