force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/High_Findings__c.field-meta.xml
<CustomField>
    <fullName>High_Findings__c</fullName>
    <label>High Findings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>