force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>