force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Pull_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request_Number__c</fullName>
    <label>Pull Request Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>