force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <externalId>true</externalId>
    <label>Run Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>