force-app/main/default/objects/GitHub_Workflow_Metric__c/fields/Run_Number__c.field-meta.xml
<CustomField>
    <fullName>Run_Number__c</fullName>
    <label>Run Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>